--- a/Semana2/Dia2/03-color.html
+++ b/Semana2/Dia2/03-color.html
@@ -10,5 +10,15 @@
     <header>
         <h1>Mi Aplicacion</h1>
     </header>
+
+    <main>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam quae error adipisci, facilis voluptates possimus, consectetur amet veniam vitae in libero laborum! Placeat illum ut rem a accusamus, exercitationem facere!</p>
+        <h3>Visual Studio Code</h3>
+        <article>
+            <p class="rojo-transparente">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem blanditiis quis tenetur incidunt velit, officia aliquam enim modi libero vel magni nobis, odio id, molestias similique mollitia veniam! Consequuntur, sequi?
+            </p>
+        </article>
+    </main>
 </body>
 </html>
